chore: inspections codestyle cleanup